New config for tmux (vi-like)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,46 @@
-# Начинать отсчёт окон с 1
+# Set first window to index 1 (not 0) to map more to the keyboard layout
 set -g base-index 1
-# Включить машь
-set-window-option -g mode-mouse on
-# Использовать мышь для выбора активной панели
-set-option -g mouse-select-pane on
+set-window-option -g pane-base-index 1
+# UTF8 support (in windows)
+set-window-option -g utf8 on
 
-# Терминал использует 256 цветов
+# Act like GNU screen
+set-option -g prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
+
+# Act like Xmonad
+unbind c
+bind Enter new-window
+#unbind &
+bind c confirm-before kill-window
+
+# Act like vim
+set-option -g status-keys vi
+set-window-option -g mode-keys vi
+# Pane navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+# Splits
+unbind %
+bind C-h split-window -h # horizontal split
+unbind '"'
+bind C-l split-window -v # vertical split
+# Windows
+bind C-j previous-window
+bind C-k next-window
+
+# Mouse mode
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
+# Use 256 color terminal
 set -g default-terminal "screen-256color"
-# Лимит на количество хранимых строк
+# Extend history limit
 set -g history-limit 10000
 
 # Включить заголовок окна
@@ -16,5 +49,10 @@ set-option -g set-titles on
 set-option -g set-titles-string '#S:#I.#P #W'
 # автоматически обновлять заголовок
 set-window-option -g automatic-rename on
-# решение бесячей проблемы с точками (ресайз)
+
+# Resize problem fix
 set-window-option -g aggressive-resize on
+# Redraw the client (if interrupted by wall, etc)
+bind R refresh-client
+# Keep your finger on ctrl, or don't, same result
+bind-key C-d detach-client
