Buttons are no longer confused in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,9 +25,9 @@ bind k select-pane -U
 bind l select-pane -R
 # Splits
 unbind %
-bind C-h split-window -h # horizontal split
+bind C-l split-window -h # horizontal split
 unbind '"'
-bind C-l split-window -v # vertical split
+bind C-h split-window -v # vertical split
 # Windows
 bind C-j previous-window
 bind C-k next-window
