--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,11 +43,11 @@ set -g default-terminal "screen-256color"
 # Extend history limit
 set -g history-limit 10000
 
-# Включить заголовок окна
+# Turn on window title
 set-option -g set-titles on
-# В заголовке выводить номер окна, название программы и её активность
+# Show window number, program name and program activity in title
 set-option -g set-titles-string '#S:#I.#P #W'
-# автоматически обновлять заголовок
+# Auto update title
 set-window-option -g automatic-rename on
 
 # Resize problem fix
@@ -56,3 +56,4 @@ set-window-option -g aggressive-resize on
 bind R refresh-client
 # Keep your finger on ctrl, or don't, same result
 bind-key C-d detach-client
+
