Adds my layout to the default session and starts htop in the smallest pane.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,3 +57,11 @@ bind R refresh-client
 # Keep your finger on ctrl, or don't, same result
 bind-key C-d detach-client
 
+# Create a new session with name 'Default'
+new-session -s Default
+# New pane by horizontal split (30%)
+split-window -h -p 30
+# New pane by vertical split (30%; do not make it current pane) and exec htop
+split-window -v -p 30 -d htop
+# Make th 1-th pane active
+select-pane -t 1
