Update tmux config for new version.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,12 +31,21 @@ bind C-h split-window -v # vertical split
 # Windows
 bind C-j previous-window
 bind C-k next-window
+# y and p as in vim
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+bind -t vi-copy 'Space' halfpage-down
+bind -t vi-copy 'Bspace' halfpage-up
+
+# extra commands for interacting with the ICCCM clipboard
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 # Mouse mode
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # Use 256 color terminal
 set -g default-terminal "screen-256color"
@@ -63,5 +72,6 @@ new-session -s Default
 split-window -h -p 30
 # New pane by vertical split (30%; do not make it current pane) and exec htop
 split-window -v -p 30 -d htop
-# Make th 1-th pane active
+# Make the 1-th pane active
 select-pane -t 1
+
