Tmux control update (like in vim)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
-# Set first window to index 1 (not 0) to map more to the keyboard layout
+# Set first window and pane at index 1 (not 0)
 set -g base-index 1
-set-window-option -g pane-base-index 1
+set -g pane-base-index 1
 # UTF8 support (in windows)
 set-window-option -g utf8 on
 
@@ -18,16 +18,21 @@ bind c confirm-before kill-window
 # Act like vim
 set-option -g status-keys vi
 set-window-option -g mode-keys vi
+# Splits
+unbind %
+bind s split-window -h # s to split horizontally
+unbind '"'
+bind v split-window -v # v for the vertical split
 # Pane navigation
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-# Splits
-unbind %
-bind C-l split-window -h # horizontal split
-unbind '"'
-bind C-h split-window -v # vertical split
+# Pane resize (key may repeat)
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 # Windows
 bind C-j previous-window
 bind C-k next-window
@@ -74,4 +79,10 @@ split-window -h -p 30
 split-window -v -p 30 -d htop
 # Make the 1-th pane active
 select-pane -t 1
+
+# Unbind arrow keys
+unbind Up
+unbind Down
+unbind Left
+unbind Right
 
