--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,61 +1,39 @@
+#### General options ####
+
+# UTF8 support
+#set -g utf8 on
+
+# Use 256 color terminal
+set -g default-terminal "tmux-256color"
+
+# Act like GNU screen
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+# Keep your finger on ctrl, or don't, same result
+bind-key C-d detach-client
+
+# reload config file
+bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
+
+
+
+#### Display options ####
+
 # Set first window and pane at index 1 (not 0)
 set -g base-index 1
 set -g pane-base-index 1
-# UTF8 support (in windows)
-set-window-option -g utf8 on
 
-# Act like GNU screen
-set-option -g prefix C-a
-unbind-key C-b
-bind-key C-a send-prefix
+# make delay shorter
+set -sg escape-time 0
 
-# Act like Xmonad
-unbind c
-bind Enter new-window
-#unbind &
-bind c confirm-before kill-window
-
-# Act like vim
-set-option -g status-keys vi
-set-window-option -g mode-keys vi
-# Splits
-unbind %
-bind s split-window -h # s to split horizontally
-unbind '"'
-bind v split-window -v # v for the vertical split
-# Pane navigation
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-# Pane resize (key may repeat)
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-# Windows
-bind C-j previous-window
-bind C-k next-window
-# y and p as in vim
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-bind -t vi-copy 'Space' halfpage-down
-bind -t vi-copy 'Bspace' halfpage-up
-
-# extra commands for interacting with the ICCCM clipboard
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
-
-# Mouse mode
-set -g mouse on
-
-# Use 256 color terminal
-set -g default-terminal "screen-256color"
-# Extend history limit
-set -g history-limit 10000
+# Resize problem fix
+set-window-option -g aggressive-resize on
+# Redraw the client (if interrupted by wall, etc)
+bind R refresh-client
+# synchronize all panes in a window
+bind q setw synchronize-panes
 
 # Turn on window title
 set-option -g set-titles on
@@ -64,12 +42,66 @@ set-option -g set-titles-string '#S:#I.#P #W'
 # Auto update title
 set-window-option -g automatic-rename on
 
-# Resize problem fix
-set-window-option -g aggressive-resize on
-# Redraw the client (if interrupted by wall, etc)
-bind R refresh-client
-# Keep your finger on ctrl, or don't, same result
-bind-key C-d detach-client
+
+
+#### Navigation ####
+
+# Act like Xmonad
+unbind c
+bind Enter new-window
+bind c confirm-before kill-window
+
+# Splits
+unbind %
+bind s split-window -h # s to split horizontally
+unbind '"'
+bind v split-window -v # v for the vertical split
+
+# Pane navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Pane resize (key may repeat)
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# Windows
+bind C-j previous-window
+bind C-k next-window
+
+
+
+#### History ####
+
+# Extend history limit
+set -g history-limit 10000
+
+# Act like vim
+set-option -g status-keys vi
+set-window-option -g mode-keys vi
+
+# y and p as in vim
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+
+# extra commands for interacting with the ICCCM clipboard
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+
+
+#### Mouse ####
+
+set -g mouse on
+
+
+
+#### Session ####
 
 # Create a new session with name 'Default'
 new-session -s Default
@@ -80,9 +112,12 @@ split-window -v -p 30 -d htop
 # Make the 1-th pane active
 select-pane -t 1
 
+
+
+#### Misc ####
+
 # Unbind arrow keys
 unbind Up
 unbind Down
 unbind Left
 unbind Right
-
