--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,123 +1,141 @@
-#### General options ####
+###############################################################################
+####                                  Help                                 ####
+###############################################################################
 
-# UTF8 support
-#set -g utf8 on
+#  set-option [-aFgopqsuUw]
+#      (alias: set)
+#
+#    -p => a pane
+#    -w => a window (set-window-option or setw)
+#    -s => a server
+#          otherwise a session option
+#    -g => the global session or window option
+#    -F => expands formats in the option value
+#    -u => unsets an option
+#    -U => unsets an option (like -u) but if the option is a pane option
+#                             also unsets the option on any panes in the window
+#    -o => prevents setting an option that is already set
+#    -q => suppresses errors about unknown or ambiguous options
+#    -a => appended to the existing setting
 
-# Use 256 color terminal
-set -g default-terminal "tmux-256color"
+###############################################################################
+####                            General options                            ####
+###############################################################################
 
-# Act like GNU screen
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+# the terminal outside supports RGB colour
+set-option -sa terminal-overrides ",xterm*:Tc"
 
-# Keep your finger on ctrl, or don't, same result
-bind-key C-d detach-client
+# changing the default prefix key
+set-option -g prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
 
 # reload config file
-bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
+bind-key R source-file "~/.tmux.conf"
 
+###############################################################################
+####                            Display options                            ####
+###############################################################################
 
-
-#### Display options ####
-
-# Set first window and pane at index 1 (not 0)
-set -g base-index 1
-set -g pane-base-index 1
+# start windows and panes at index 1 (not 0)
+set-option -g base-index 1
+set-option -g pane-base-index 1
+# renumber windows when someone closes
+set-option -g renumber-windows on
 
 # make delay shorter
-set -sg escape-time 0
+set-option -sg escape-time 0
 
 # Resize problem fix
-set-window-option -g aggressive-resize on
+set-option -gw aggressive-resize on
 # Redraw the client (if interrupted by wall, etc)
-bind R refresh-client
+bind-key r refresh-client
 # synchronize all panes in a window
-bind q setw synchronize-panes
+bind-key q setw synchronize-panes
 
 # Turn on window title
 set-option -g set-titles on
 # Show window number, program name and program activity in title
 set-option -g set-titles-string '#S:#I.#P #W'
 # Auto update title
-set-window-option -g automatic-rename on
+set-option -gw automatic-rename on
 
-
-
-#### Navigation ####
+###############################################################################
+####                               Navigation                              ####
+###############################################################################
 
 # Act like Xmonad
-unbind c
-bind Enter new-window
-bind c confirm-before kill-window
+unbind-key c
+bind-key Enter new-window
+bind-key c confirm-before kill-window
 
 # Splits
-unbind %
-bind s split-window -h # s to split horizontally
-unbind '"'
-bind v split-window -v # v for the vertical split
+#unbind-key % # vertical split
+bind-key s split-window -v # s to split horizontally
+#unbind-key '"' # horizontally
+bind-key v split-window -h # v for the vertical split
 
-# Pane navigation
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# Vim style pane selection
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # Pane resize (key may repeat)
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
 
 # Windows
-bind C-j previous-window
-bind C-k next-window
+bind-key C-j previous-window
+bind-key C-k next-window
 
-
-
-#### History ####
+###############################################################################
+####                                History                                ####
+###############################################################################
 
 # Extend history limit
-set -g history-limit 10000
+set-option -g history-limit 20000
 
 # Act like vim
 set-option -g status-keys vi
-set-window-option -g mode-keys vi
+set-option -gw mode-keys vi
 
 # y and p as in vim
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
+bind-key Escape copy-mode
+unbind-key p
+bind-key p paste-buffer
 
 # extra commands for interacting with the ICCCM clipboard
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+bind-key C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+bind-key C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
+###############################################################################
+####                                 Mouse                                 ####
+###############################################################################
 
+set-option -g mouse on
 
-#### Mouse ####
-
-set -g mouse on
-
-
-
-#### Session ####
+###############################################################################
+####                                Session                                ####
+###############################################################################
 
 # Create a new session with name 'Default'
 new-session -s Default
 # New pane by horizontal split (30%)
-split-window -h -p 30
+split-window -h -l 30%
 # New pane by vertical split (30%; do not make it current pane) and exec htop
-split-window -v -p 30 -d htop
+split-window -v -l 30% -d htop
 # Make the 1-th pane active
 select-pane -t 1
 
+###############################################################################
+####                                  Misc                                 ####
+###############################################################################
 
-
-#### Misc ####
-
-# Unbind arrow keys
-unbind Up
-unbind Down
-unbind Left
-unbind Right
+# Unbind-keybind arrow keys
+unbind-key Up
+unbind-key Down
+unbind-key Left
+unbind-key Right
