Keep CWD when splitting or creating new windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,9 @@
 ####                            General options                            ####
 ###############################################################################
 
-# the terminal outside supports RGB colour
+# Forces Tmux to ignore what $TERM says.
+# If the terminal is detected as xterm or something similar,
+# assume it has the Tc (True Color) capability.
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 # changing the default prefix key
@@ -30,27 +32,29 @@ set-option -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
-# reload config file
+# Reload config file
 bind-key R source-file "~/.tmux.conf"
 
 ###############################################################################
 ####                            Display options                            ####
 ###############################################################################
 
-# start windows and panes at index 1 (not 0)
+# Start windows and panes at index 1 (not 0)
 set-option -g base-index 1
 set-option -g pane-base-index 1
-# renumber windows when someone closes
+# Renumber windows when someone closes (avoids gaps in numbering.)
 set-option -g renumber-windows on
 
-# make delay shorter
+# Removes the delay after pressing the `Esc` key,
+# making working in Vim/Neovim inside Tmux instantly responsive.
 set-option -sg escape-time 0
 
-# Resize problem fix
+# Tmux resize the window to fit the size of the active terminal
+# (the one I'm looking at), rather than the smallest one connected
 set-option -gw aggressive-resize on
 # Redraw the client (if interrupted by wall, etc)
 bind-key r refresh-client
-# synchronize all panes in a window
+# Synchronize all panes in a window
 bind-key q setw synchronize-panes
 
 # Turn on window title
@@ -66,14 +70,14 @@ set-option -gw automatic-rename on
 
 # Act like Xmonad
 unbind-key c
-bind-key Enter new-window
+bind-key Enter new-window -c "#{pane_current_path}"
 bind-key c confirm-before kill-window
 
 # Splits
-#unbind-key % # vertical split
-bind-key s split-window -v # s to split horizontally
-#unbind-key '"' # horizontally
-bind-key v split-window -h # v for the vertical split
+#unbind-key % -c "#{pane_current_path}" # vertical split
+bind-key s split-window -v -c "#{pane_current_path}" # s to split horizontally
+#unbind-key '"' -c "#{pane_current_path}" # horizontally
+bind-key v split-window -h -c "#{pane_current_path}" # v for the vertical split
 
 # Vim style pane selection
 bind-key h select-pane -L
@@ -107,9 +111,12 @@ bind-key Escape copy-mode
 unbind-key p
 bind-key p paste-buffer
 
-# extra commands for interacting with the ICCCM clipboard
-bind-key C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind-key C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+# Pressing 'y' in vi-mode immediately copies the text to the system clipboard.
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clipboard"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -sel clipboard"
+
+# Paste from the system clipboard
+bind-key P run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 ###############################################################################
 ####                                 Mouse                                 ####
