Added a visual indication with a red background for tabs with synchronized panes in tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,6 +56,8 @@ set-option -gw aggressive-resize on
 bind-key r refresh-client
 # Synchronize all panes in a window
 bind-key q setw synchronize-panes
+set-option -gw window-status-current-format '#{?pane_synchronized,#[bg=red],}#I:#W'
+set-option -gw window-status-format         '#{?pane_synchronized,#[bg=red],}#I:#W'
 
 # Turn on window title
 set-option -g set-titles on
